--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "4.1.2",
+    "redux-saga": "1.1.3",
+    "reselect": "4.1.5",
+    "react-redux": "8.0.1",
+    "axios": "0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
