--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux-saga": "1.1.3",
     "reselect": "4.1.5",
     "react-redux": "8.0.1",
-    "axios": "0.27.2"
+    "axios": "0.27.2",
+    "moment": "2.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
