--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.20.3",
+    "antd": "^4.20.6",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
@@ -29,7 +29,8 @@
     "reselect": "4.1.5",
     "react-redux": "8.0.1",
     "axios": "0.27.2",
-    "moment": "2.29.3"
+    "moment": "2.29.3",
+    "uuid": "8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
